remove redundant code in constructors, add method for validating List<List<Double>> for Matrix construction